--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -12,19 +12,16 @@
 name: Update Checker
 
 env:
-  REPO_URL_LEDE: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  REPO_URL_SSRPLUS: https://github.com/fw876/helloworld
-  REPO_URL_PASSWALL: https://github.com/xiaorouji/openwrt-passwall
-  REPO_BRANCH_PASSWALL: main
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 0 16 * * *
+#  schedule:
+#    - cron: 0 */18 * * *
 
 jobs:
-  lede:
+  check:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,8 +29,9 @@ jobs:
     - name: Get Commit Hash
       id: getHash
       run: |
-        git clone --depth 1 $REPO_URL_LEDE -b $REPO_BRANCH .
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH .
         echo "::set-output name=commitHash::$(git rev-parse HEAD)"
+
     - name: Compare Commit Hash
       id: cacheHash
       uses: actions/cache@v2
@@ -45,82 +43,16 @@ jobs:
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
         echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
+
     - name: Trigger build
       if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v1
       with:
-        token: ${{ secrets.RELEASES_TOKEN }}
-        event-type: lede Source Code Update
-        
-   # - name: Source Code Update notification
-   #   if: steps.cacheHash.outputs.cache-hit != 'true'
-   #   run: |
-   #     curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}lede源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
+        event-type: Source Code Update
 
-  
-  
-  ssrplus:
-    runs-on: ubuntu-latest
-
-    steps:
-
-    - name: Get Commit Hash
-      id: getHash
-      run: |
-        git clone --depth 1 $REPO_URL_SSRPLUS -b $REPO_BRANCH .
-        echo "::set-output name=commitHash::$(git rev-parse HEAD)"
-    - name: Compare Commit Hash
-      id: cacheHash
-      uses: actions/cache@v2
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@main
       with:
-        path: .commitHash
-        key: HEAD-${{ steps.getHash.outputs.commitHash }}
-
-    - name: Save New Commit Hash
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      run: |
-        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
-    - name: Trigger build
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.RELEASES_TOKEN }}
-        event-type: ssrplus Source Code Update
-        
- #   - name: Source Code Update notification
- #     if: steps.cacheHash.outputs.cache-hit != 'true'
- #     run: |
- #       curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}ssrplus源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
-
-  passwall:
-    runs-on: ubuntu-latest
-
-    steps:
-
-    - name: Get Commit Hash
-      id: getHash
-      run: |
-        git clone --depth 1 $REPO_URL_PASSWALL -b $REPO_BRANCH_PASSWALL .
-        echo "::set-output name=commitHash::$(git rev-parse HEAD)"
-    - name: Compare Commit Hash
-      id: cacheHash
-      uses: actions/cache@v2
-      with:
-        path: .commitHash
-        key: HEAD-${{ steps.getHash.outputs.commitHash }}
-
-    - name: Save New Commit Hash
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      run: |
-        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
-    - name: Trigger build
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.RELEASES_TOKEN }}
-        event-type: passwall Source Code Update
-
-   # - name: Source Code Update notification
-   #   if: steps.cacheHash.outputs.cache-hit != 'true'
-   #   run: |
-   #     curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}passwall源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+        retain_days: 1
+        keep_minimum_runs: 1
