--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -20,8 +20,8 @@ env:
   
 on:
   workflow_dispatch:
-#  schedule:
-#    - cron: 0 */18 * * *
+  schedule:
+    - cron: 0 22 * * *
 
 jobs:
   check:
