--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -52,7 +52,7 @@ jobs:
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-        event-type: Source Code Update
+        event-type: lede Source Code Update
 
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
@@ -94,7 +94,7 @@ jobs:
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-        event-type: Source Code Update
+        event-type: passwall Source Code Update
 
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
@@ -131,7 +131,7 @@ jobs:
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-        event-type: Source Code Update
+        event-type: ssrplus Source Code Update
 
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
