--- a/.github/workflows/build-openwrt-21.02.yml
+++ b/.github/workflows/build-openwrt-21.02.yml
@@ -174,6 +174,18 @@ jobs:
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
 
+    - name: Prepare artifact
+      run: |
+        mkdir -p ./artifact/package
+        rm -rf $(find ./bin/targets/ -type d -name "packages")
+        cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
+
+    - name: Deliver package
+      uses: actions/upload-artifact@v2
+      with:
+        name: OpenWrt_package
+        path: ./artifact/package/          
+
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
