--- a/.github/workflows/New-OpenWrt-21.02.yml
+++ b/.github/workflows/New-OpenWrt-21.02.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: new-21.02-21.02
+name: New-OpenWrt-21.02
 
 on:
   repository_dispatch:
