--- a/.github/workflows/mwan3-build-openwrt.yml
+++ b/.github/workflows/mwan3-build-openwrt.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: mwan3 Build OpenWrt
+name: OpenWrt Dazahui
 
 on:
   repository_dispatch:
